--- a/sass/style.scss
+++ b/sass/style.scss
@@ -54,6 +54,11 @@ a{
     font-size: 16px;
 }
 
+.buttonCancelRemove{
+    width: 185px;
+    height: 35px;
+    font-size: 16px;
+}
 ::placeholder {
     opacity: 0.4; 
     font-size: 15px;
@@ -64,7 +69,7 @@ a{
     margin-top: 20px;
 }
 
-.buttonSignUp {
+.buttonSignUp, .buttonCancelRemove {
     margin-top: 30px;
 }
 
@@ -235,9 +240,7 @@ td{
 .buttonBuySell{
     width: 90px;
     height: 30px;
-    font-size: 14px;
-    font-weight: 600;
-    color: #404040;
+    font-size: 16px;
 }
 
 .buttonDistance{
@@ -272,6 +275,7 @@ td{
     width: 398px;
     height: 35px;
     font-size: 16px;
+    padding-left: 10px;
 }
 
 .buttons{
